; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_nvidia_texture_shader.c_nvts_enable.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_nvidia_texture_shader.c_nvts_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_gl_info = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 (i32)*, i32 (i32)* }

@GL_TEXTURE_SHADER_NV = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"glEnable(GL_TEXTURE_SHADER_NV)\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"glDisable(GL_TEXTURE_SHADER_NV)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wined3d_gl_info*, i64)* @nvts_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvts_enable(%struct.wined3d_gl_info* %0, i64 %1) #0 {
  %3 = alloca %struct.wined3d_gl_info*, align 8
  %4 = alloca i64, align 8
  store %struct.wined3d_gl_info* %0, %struct.wined3d_gl_info** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = call i32 @nvrc_enable(%struct.wined3d_gl_info* %5, i64 %6)
  %8 = load i64, i64* %4, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %3, align 8
  %12 = getelementptr inbounds %struct.wined3d_gl_info, %struct.wined3d_gl_info* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32 (i32)*, i32 (i32)** %14, align 8
  %16 = load i32, i32* @GL_TEXTURE_SHADER_NV, align 4
  %17 = call i32 %15(i32 %16)
  %18 = call i32 @checkGLcall(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %28

19:                                               ; preds = %2
  %20 = load %struct.wined3d_gl_info*, %struct.wined3d_gl_info** %3, align 8
  %21 = getelementptr inbounds %struct.wined3d_gl_info, %struct.wined3d_gl_info* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 0
  %24 = load i32 (i32)*, i32 (i32)** %23, align 8
  %25 = load i32, i32* @GL_TEXTURE_SHADER_NV, align 4
  %26 = call i32 %24(i32 %25)
  %27 = call i32 @checkGLcall(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  br label %28

28:                                               ; preds = %19, %10
  ret void
}

declare dso_local i32 @nvrc_enable(%struct.wined3d_gl_info*, i64) #1

declare dso_local i32 @checkGLcall(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
